three sketches, as they were on OP

--- a/all_sketches.html
+++ b/all_sketches.html
@@ -5,6 +5,8 @@
 </head>
 <body>   
     <iframe src="triangular-mesh/index.html" scrolling=no></iframe>
+    <iframe src="basic-dynamics/index.html" scrolling=no></iframe>
+    <iframe src="spatial-gradient/index.html" scrolling=no></iframe>
 </body>
 <!-- <script type="application/javascript">
 
