moving basic dynamics and triangular mesh to p5.js

--- a/triangular-mesh/index.html
+++ b/triangular-mesh/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
 	<!-- keep the line below for OpenProcessing compatibility -->
-	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+	<!-- <script src="https://openprocessing.org/openprocessing_sketch.js"></script> -->
+	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
+
 </head>
 
 <body>   
-	<canvas></canvas>
+	<!-- <canvas></canvas> -->
+	<main></main>
 </body>
 <script src="mySketch.js"></script>
 </html>
