--- a/basic-dynamics/index.html
+++ b/basic-dynamics/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
 	<!-- keep the line below for OpenProcessing compatibility -->
-	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+	<!-- <script src="https://openprocessing.org/openprocessing_sketch.js"></script> -->
+
+	<!-- <script type="application/javascript" src="https://raw.githubusercontent.com/processing/p5.js/v1.4.2/src/math/noise.js" ></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script> -->
+	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
+	<!-- <script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/p5.sound.js"></script> -->
 </head>
 
 <body>   
-	<canvas></canvas>
+	<!-- <canvas></canvas> -->
+	<main></main>
 </body>
-<script src="noise.js"></script>
+<!-- <script src="noise.js"></script> -->
 <script src="mySketch.js"></script>
 </html>
