basic dynamics as an independent sketch

--- a/basic-dynamics/index.html
+++ b/basic-dynamics/index.html
@@ -15,7 +15,10 @@
 
 <body>   
 	<!-- <canvas></canvas> -->
-	<main></main>
+	<main><div id="basic-dynamics"></div></main>
 </body>
 <script src="mySketch.js"></script>
+<script type="application/javascript">
+	let basic_dynamics_sketch = new p5 (basic_dynamics, "basic-dynamics");
+</script>
 </html>
