spatial gradient to p5

--- a/basic-dynamics/index.html
+++ b/basic-dynamics/index.html
@@ -15,10 +15,14 @@
 
 <body>   
 	<!-- <canvas></canvas> -->
-	<main><div id="basic-dynamics"></div></main>
+	<main>
+		<div id="basic-dynamics"></div>
+		<div id="basic-dynamics-2"></div>
+	</main>
 </body>
 <script src="mySketch.js"></script>
 <script type="application/javascript">
 	let basic_dynamics_sketch = new p5 (basic_dynamics, "basic-dynamics");
+	let basic_dynamics_sketch_2 = new p5 (basic_dynamics, "basic-dynamics-2");
 </script>
 </html>
