--- a/spatial-gradient/index.html
+++ b/spatial-gradient/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
 	<!-- keep the line below for OpenProcessing compatibility -->
-	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+	<!-- <script src="https://openprocessing.org/openprocessing_sketch.js"></script> -->
+	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
+	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
+	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
+	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
 </head>
 
 <body>   
-	<canvas></canvas>
+	<body>   
+		<main>
+			<div id="spatial-gradient"></div>
+		</main>
+	</body>
 </body>
 <script src="mySketch.js"></script>
+<script type="application/javascript">
+	let spatial_gradient_sketch = new p5 (spatial_gradient, "spatial-gradient");
+</script>
 </html>
