all sketches are now proper p5 with a lib

--- a/triangular-mesh/index.html
+++ b/triangular-mesh/index.html
@@ -4,12 +4,18 @@
 	<!-- keep the line below for OpenProcessing compatibility -->
 	<!-- <script src="https://openprocessing.org/openprocessing_sketch.js"></script> -->
 	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
-
+	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
+	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
+	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
 </head>
 
 <body>   
-	<!-- <canvas></canvas> -->
-	<main></main>
+	<main>
+		<div id="triangular-mesh"></div>
+	</main>
 </body>
 <script src="mySketch.js"></script>
+<script type="application/javascript">
+	let triangular_mesh_sketch = new p5 (triangular_mesh, "triangular-mesh");
+</script>
 </html>
