yasha mia spatial gradient

--- a/all_sketches.html
+++ b/all_sketches.html
@@ -8,21 +8,14 @@
     <iframe src="basic-dynamics/index.html" scrolling=no></iframe>
     <iframe src="spatial-gradient/index.html" scrolling=no></iframe>
 </body>
-<!-- <script type="application/javascript">
+<script type="application/javascript">
 
-    function resizeIFrameToFitContent( iFrame ) {
+// let body = document.querySelector("body");
+// let sketches = [
+//     "triangular-mesh",
+//     "basic-dynamics",
+//     "spatial-gradient"
+// ];
     
-        iFrame.width  = iFrame.contentWindow.document.body.scrollWidth;
-        iFrame.height = iFrame.contentWindow.document.body.scrollHeight;
-    }
-
-    window.addEventListener('DOMContentLoaded', function(e) {
-            // or, to resize all iframes:
-        var iframes = document.querySelectorAll("iframe");
-        for( var i = 0; i < iframes.length; i++) {
-            resizeIFrameToFitContent( iframes[i] );
-        }
-    } );
-    
-</script> -->
+</script>
 </html>
