yasha mia fullscreen and final colors

--- a/triangular-mesh-yasha-mia/index.html
+++ b/triangular-mesh-yasha-mia/index.html
@@ -7,6 +7,9 @@
 	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
 	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
 	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
+	<style>
+		body {margin: 0px;}
+	</style>
 </head>
 
 <body>   
