the yasha-mia sketch close to the final version. The version with the text is available in another repo

--- a/triangular-mesh-yasha-mia/index.html
+++ b/triangular-mesh-yasha-mia/index.html
@@ -15,6 +15,8 @@
 <body>   
 	<main>
 		<div id="triangular-mesh"></div>
+		<!-- <button id="make-fullscreen" onclick="triangular_mesh_sketch.make_fullscreen();">Fullscreen</button>
+		<button id="make-a4" onclick="triangular_mesh_sketch.make_a4();">Make A4</button> -->
 	</main>
 </body>
 <script src="mySketch.js"></script>
