--- a/basic-dynamics/index.html
+++ b/basic-dynamics/index.html
@@ -6,11 +6,11 @@
 
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script> -->
-	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
-	<script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
-	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/local-dev/p5.js"></script>
-	<script src="file://C:/Users/okdim/YandexDisk/coding_leisure/openprocessing_sketches/okdimokPrimitives.js"></script>
-	<!-- <script src="file://C:/Users/dmitrym/YandexDisk/coding_leisure/openprocessing_sketches/p5.sound.js"></script> -->
+	<script src="../local-dev/p5.createloop.js"></script>
+	<script src="../local-dev/p5.js"></script>
+	<script src="../okdimokPrimitives.js"></script>
+	<script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" integrity="sha512-rCZdHNB0AePry6kAnKAVFMRfWPmUXSo+/vlGtrOUvhsxD0Punm/xWbEh+8vppPIOzKB9xnk42yCRZ5MD/jvvjQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>   
