preparing dynamics for the loops

--- a/spatial-gradient/index.html
+++ b/spatial-gradient/index.html
@@ -4,7 +4,12 @@
 	<!-- keep the line below for OpenProcessing compatibility -->
 	<!-- <script src="https://openprocessing.org/openprocessing_sketch.js"></script> -->
 	<!-- https://github.com/mrchantey/p5.createLoop/tree/master/p5.createLoop -->
- 	</head>
+	<script src="../local-dev/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" integrity="sha512-rCZdHNB0AePry6kAnKAVFMRfWPmUXSo+/vlGtrOUvhsxD0Punm/xWbEh+8vppPIOzKB9xnk42yCRZ5MD/jvvjQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="../local-dev/p5.createloop.js"></script>
+	<script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script>
+	<script src="../okdimokPrimitives.js"></script>
+</head>
 
 <body>   
 	<main>
