--- a/triangular-mesh/index.html
+++ b/triangular-mesh/index.html
@@ -8,6 +8,7 @@
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" integrity="sha512-rCZdHNB0AePry6kAnKAVFMRfWPmUXSo+/vlGtrOUvhsxD0Punm/xWbEh+8vppPIOzKB9xnk42yCRZ5MD/jvvjQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 	<script src="../local-dev/p5.createloop.js"></script>
 	<!-- <script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script> -->
+	<script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script>
 	<script src="../okdimokPrimitives.js"></script>
 </head>
 
