bringing common utilities to utils.add_default_behaviors

--- a/all_sketches.html
+++ b/all_sketches.html
@@ -7,6 +7,7 @@
     <iframe src="triangular-mesh/index.html" scrolling=no></iframe>
     <iframe src="basic-dynamics/index.html" scrolling=no></iframe>
     <iframe src="spatial-gradient/index.html" scrolling=no></iframe>
+    <iframe src="minimal-example/index.html" scrolling=no></iframe>
 </body>
 <script type="application/javascript">
 
