artificial clicks during any saving forced reseed. Fixed

--- a/all_sketches.html
+++ b/all_sketches.html
@@ -8,6 +8,7 @@
     <iframe src="basic-dynamics/index.html" scrolling=no></iframe>
     <iframe src="spatial-gradient/index.html" scrolling=no></iframe>
     <iframe src="minimal-example/index.html" scrolling=no></iframe>
+    <iframe src="circles-overlapping/index.html" scrolling=no></iframe>
 </body>
 <script type="application/javascript">
 
