final dimchik text

--- a/armenia-planes/index.html
+++ b/armenia-planes/index.html
@@ -32,12 +32,23 @@
 <body>   
 	<main>
 		<div id="armenia-planes"></div>
-		<div id="dimchik-text">
+		<!-- <div id="dimchik-text">
 			<p>Дорогой Димчик!</p> 
 			<p>С днём рождения!</p> 
-			<p>Эта открыта — оставшаяся часть подарка, который мы тебе уже подарили — билетов в свободный армянский мир. Добро пожаловать в Ереван. </p>
-			<p>Даня, Саша, Вита, Дима, Дара</p>
-		</div>
+			<p>Эта открытка — оставшаяся часть подарка, который мы тебе уже подарили, — билетов в свободный армянский мир. Добро пожаловать в Ереван. </p>
+			<p>
+				Вита Власова,
+				Володя Кузнецов,
+				Даня Селегей,
+				Дара Миронова,
+				Дима Миронов,
+				Дима Шмаков,
+				Лиля Мусина,
+				Маша Литвинова,
+				Саша Трусевич,
+				Саша Шахова
+				</p>
+		</div> -->
 	</main>
 </body>
 <script src="mySketch.js"></script>
