--- a/minimal-example/index.html
+++ b/minimal-example/index.html
@@ -12,7 +12,7 @@
 	<!-- <script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script> -->
 	<script src="/okdimokPrimitives.js"></script>
 	<style>
-		body {margin: 0px;}
+		body {margin: 0px; overflow: hidden;}
 	</style>
 </head>
 </head>
