initial checkmark sticker

--- a/all_sketches.html
+++ b/all_sketches.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" href="all_sketches.css">
 </head>
 <body>   
-    <iframe src="triangular-mesh/index.html" scrolling=no></iframe>
-    <iframe src="armenia-planes/index.html" scrolling=no></iframe>
-    <iframe src="basic-dynamics/index.html" scrolling=no></iframe>
-    <iframe src="spatial-gradient/index.html" scrolling=no></iframe>
-    <iframe src="minimal-example/index.html" scrolling=no></iframe>
-    <iframe src="circles-overlapping/index.html" scrolling=no></iframe>
+    <iframe src="triangular-mesh/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="armenia-planes/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="basic-dynamics/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="spatial-gradient/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="minimal-example/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="circles-overlapping/index.html#sz=300" scrolling=no></iframe>
 </body>
 <script type="application/javascript">
 
