--- a/all_sketches.html
+++ b/all_sketches.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="all_sketches.css">
 </head>
 <body>   
+    <iframe src="checkmark-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="cross-sticker/index.html#sz=300" scrolling=no></iframe>
     <iframe src="triangular-mesh/index.html#sz=300" scrolling=no></iframe>
     <iframe src="armenia-planes/index.html#sz=300" scrolling=no></iframe>
     <iframe src="basic-dynamics/index.html#sz=300" scrolling=no></iframe>
