--- a/all_sketches.html
+++ b/all_sketches.html
@@ -6,6 +6,7 @@
 <body>   
     <iframe src="checkmark-sticker/index.html#sz=300" scrolling=no></iframe>
     <iframe src="cross-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="tween-example/index.html#sz=300" scrolling=no></iframe>
     <iframe src="triangular-mesh/index.html#sz=300" scrolling=no></iframe>
     <iframe src="armenia-planes/index.html#sz=300" scrolling=no></iframe>
     <iframe src="basic-dynamics/index.html#sz=300" scrolling=no></iframe>
