--- a/yesno-sticker/index.html
+++ b/yesno-sticker/index.html
@@ -10,6 +10,8 @@
 	<!-- <script src="https://unpkg.com/p5.createloop@0.2.8/dist/p5.createloop.js"></script> -->
 	<script src="/local-dev/CCapture.all.min.js"></script>
 	<!-- <script src="https://unpkg.com/ccapture.js@1.1.0/build/CCapture.all.min.js"></script> -->
+	<script src="/local-dev/p5.tween.js"></script>
+	<!-- <script src="https://unpkg.com/p5.tween@1.0.0/dist/p5.tween.min.js"></script> -->
 	<script src="/okdimokPrimitives.js"></script>
 	<style>
 		body {margin: 0px; overflow: hidden; background: black;}
