initial Svetlitsa sticker effect

--- a/all_sketches.html
+++ b/all_sketches.html
@@ -4,15 +4,20 @@
 <link rel="stylesheet" href="all_sketches.css">
 </head>
 <body>   
-    <iframe src="checkmark-sticker/index.html#sz=300" scrolling=no></iframe>
-    <iframe src="cross-sticker/index.html#sz=300" scrolling=no></iframe>
-    <iframe src="tween-example/index.html#sz=300" scrolling=no></iframe>
-    <iframe src="triangular-mesh/index.html#sz=300" scrolling=no></iframe>
     <iframe src="armenia-planes/index.html#sz=300" scrolling=no></iframe>
     <iframe src="basic-dynamics/index.html#sz=300" scrolling=no></iframe>
-    <iframe src="spatial-gradient/index.html#sz=300" scrolling=no></iframe>
-    <iframe src="minimal-example/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="checkmark-sticker/index.html#sz=300" scrolling=no></iframe>
     <iframe src="circles-overlapping/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="climbing-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="cross-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="hi-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="minimal-example/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="spatial-gradient/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="svetlitsa-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="triangular-mesh/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="tween-example/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="wow-sticker/index.html#sz=300" scrolling=no></iframe>
+    <iframe src="yesno-sticker/index.html#sz=300" scrolling=no></iframe>
 </body>
 <script type="application/javascript">
 
