Svetlitsa Rus text

--- a/svetlitsa-sticker/index.html
+++ b/svetlitsa-sticker/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
 	<!-- keep the line below for OpenProcessing compatibility -->
 	<!-- <script src="https://openprocessing.org/openprocessing_sketch.js"></script> -->
 	<!-- https://github.com/mrchantey/p5.createLoop/tree/master/p5.createLoop -->
