--- a/hi-sticker/index.html
+++ b/hi-sticker/index.html
@@ -14,7 +14,7 @@
 	<!-- <script src="https://unpkg.com/p5.tween@1.0.0/dist/p5.tween.min.js"></script> -->
 	<script src="/okdimokPrimitives.js"></script>
 	<style>
-		body {margin: 0px; overflow: hidden; background: black;}
+		body {margin: 0px; overflow: hidden; background: grey;}
 	</style>
 </head>
 </head>
