updating some more sketcher with ver and margins

--- a/hearts-sticker/index.html
+++ b/hearts-sticker/index.html
@@ -15,7 +15,7 @@
 	<!-- <script src="https://unpkg.com/p5.tween@1.0.0/dist/p5.tween.min.js"></script> -->
 	<script src="/okdimokPrimitives.js"></script>
 	<style>
-		body {margin: 0px; overflow: hidden; background: black;}
+		body {margin: 0px; overflow: hidden; background: #222;}
 	</style>
 </head>
 </head>
